2004-04-23  Derek Price  <derek@ximbiot.com>

	* stamp-ch: Regenerated.

2004-04-23  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add stdbool.h & stamp-sh.
	(stdbool.h, stamp-sh): New targets.
	* stdbool.h, stamp-sh: New files.
	* Makefile.in: Regenerated.

2004-04-23  Derek Price  <derek@ximbiot.com>

	* config.h.in: Don't define HAVE_ALLOCA.  Let alloca_.h do it instead.
	* config.h: Regenerated.

2004-04-20  Derek Price  <derek@ximbiot.com>

	* filesubr.c (deep_remove_dir): Correct typo.

2004-04-20  Derek Price  <derek@ximbiot.com>

	* filesubr.c (unlink_file_dir, deep_remove_dir): Handle errno of
	ENOTEMPTY from dirs under Windows XP.
	(Report and suggested fix from Ken Raeburn <raeburn@mit.edu>.)

2004-04-15  Derek Price  <derek@ximbiot.com>

	* config.h.in: Define HAVE_ALLOCA_H and HAVE_ALLOCA to get around the
	dain bramage of a few GNULIB modules.
	* config.h, stamp-ch: Regenerated.

2004-04-15  Derek Price  <derek@ximbiot.com>

	* fix-msvc-mak.pl: Remove default build configuration hooks.

2004-04-15  Derek Price  <derek@ximbiot.com>

	* fix-msvc-mak.pl: Set default build configuration to Debug.

2004-04-14  Derek Price  <derek@ximbiot.com>

	* cvsntfix.pl: Rename to...
	* fix-msvc-mak.pl: ...this.
	* fix-msvc-mak-head.pl: New file.
	* .cvsignore: Add fix-msvc-mak.

2004-04-14  Derek Price  <derek@ximbiot.com>

	* cvsntfix.pl: New file.
	(Original from Conrad Pino <conrad@pino.com>.)

2004-04-05  Derek Price  <derek@ximbiot.com>

	* filesubr.c (isabsolute): Remove this function for real.

2004-04-04  Derek Price  <derek@ximbiot.com>

	* filesubr.c (isabsolute): Remove this function.

2004-03-29  Derek Price  <derek@ximbiot.com>

	* README: Note makefiles geenerated with MSVC++ 5.x.

2004-03-28  Derek Price  <derek@ximbiot.com>

	* README: Note MSVC pathing problem when exporting makefiles.

2004-03-26  Derek Price  <derek@ximbiot.com>

	* README: Note build files generated using MSVC 6.0.  Erase uneccessary